초기 테이블 셀 수를 0에서 10로 변경

--- a/MulLe/Info.plist
+++ b/MulLe/Info.plist
@@ -60,5 +60,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Recorder will use mic. Do you allow it?</string>
 </dict>
 </plist>
