Speech to Text 예제 구현. 첫번째 녹음의 텍스트를 표시함.

--- a/MulLe/Info.plist
+++ b/MulLe/Info.plist
@@ -62,5 +62,7 @@
 	</array>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Recorder will use mic. Do you allow it?</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>Recorded speech will be converted to text. Do you allow it?</string>
 </dict>
 </plist>
