폴더별로 파일 패치

--- a/MulLe/Info.plist
+++ b/MulLe/Info.plist
@@ -64,5 +64,7 @@
 	<string>Recorder will use mic. Do you allow it?</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>Recorded speech will be converted to text. Do you allow it?</string>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 </dict>
 </plist>
